fix: name of style file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheets" href="styles.css"></link>
+    <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
     <h1>Palindrome Checker</h1>
